# real-estate-price-predictor

./: .gitignore  README.md  config.py  data_cleaning.py  feature_selection.py  main.py  make_summary.py  preprocessor.py  pyproject.toml  requirements.txt  split_data.py  train.py  train_single_model.py
config/: config.yaml  experiment_config.yaml
feature_sets/: .gitignore  comb_all_nfeat_201_pca_count_loc.json  elasticnet_all_nfeat_296_pca_scaled_count_loc.json  rfe_all_nfeat_100_nonpca.json  rfecv_all_nfeat_152_nonpca_count_loc.json  rfecv_all_nfeat_158_pca_count_loc.json  rfecv_all_nfeat_158_umap_count_loc.json  rfecv_all_nfeat_44_pca_scaled_count.json  rfecv_all_nfeat_60_pca_count.json  rfecv_all_nfeat_60_pca_count_loc.json  rfecv_all_nfeat_70_nonpca_count_loc.json  rfecv_all_nfeat_80_nonpca_count.json  rfecv_all_nfeat_81_nonpca_count.json  rfecv_base_img_nfeat_24_pca_scaled_count.json  rfecv_base_img_nfeat_56_pca_count.json  rfecv_base_img_nfeat_56_pca_count_50.json  rfecv_base_nfeat_110_nonpca_count_loc.json  rfecv_base_nfeat_112_nonpca_count_loc.json  rfecv_base_nfeat_117_nonpca_count_loc.json  rfecv_base_nfeat_118_nonpca_count_loc.json  rfecv_base_nfeat_56_nonpca_count_loc.json  rfecv_base_nfeat_80_nonpca_scaled_count copy.json  rfecv_base_nfeat_80_pca_scaled_count.json  rfecv_base_pano_nfeat_28_pca_scaled_count.json  rfecv_base_poi_nfeat_174_pca_scaled_count.json  rfecv_base_poi_pano_nfeat_158_nonpca_count_loc.json  rfecv_base_poi_pano_nfeat_160_nonpca_count_loc.json  rfecv_base_poi_pano_nfeat_182_nonpca_scaled_count.json  (+2 more)
notebooks/: .gitignore  model.ipynb  (+7 more)
(+15 files in other folders)
