[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "optuna-integration>=4.3.0",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "unidecode>=1.4.0",
    "xgboost>=3.0.0",
]
